# engine

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/curve/: Cargo.toml
examples/curve/src/: main.rs
examples/model/: Cargo.toml
examples/pmm/: 1.emm  1.pmm  2.pmm  Cargo.toml
examples/pmm/src/: main.rs
examples/pmm/static/: index.html
examples/pmx/: Cargo.toml  安特.pmx
examples/pmx/src/: main.rs
examples/vmd/: Cargo.toml  M.vmd
examples/vmd/src/: main.rs
examples/webgl/: Cargo.toml
examples/webgl/src/: main.rs
src/: lib.rs  main.rs
src/animation/: mod.rs
src/animation/animations/: animator.rs  clip.rs  curve.rs  mod.rs
src/animation/core/: animation.rs  evaluate.rs  interpolator.rs  loader.rs  mod.rs
src/animation/interpolators/: fixed.rs  linear.rs  mod.rs  path.rs
src/animation/keyframes/: keyframe.rs  mod.rs
src/animation/loaders/: mod.rs  vmd.rs
src/math/: mod.rs  ser.rs  vec3.rs
src/models/: mod.rs
src/models/core/: bone.rs  error.rs  loader.rs  material.rs  mesh.rs  mod.rs  model.rs  solver.rs
src/models/loaders/: mod.rs  pmx.rs
src/renderer/: mod.rs
src/renderer/core/: canvas.rs  mod.rs  renderer.rs
src/renderer/renderer/: mod.rs
src/renderer/renderer/forward/: forward.rs  mod.rs  shaders.rs  uniforms.rs
src/renderer/webgl/: mod.rs  webgl_common.rs  webgl_context.rs  webgl_native.rs  webgl_stdweb_common.rs  webgl_stdweb_context.rs  webgl_stdweb_native.rs
src/renderer/window/: mod.rs  native.rs  web.rs
src/scene/: mod.rs
src/scene/cameras/: mod.rs  orthographic.rs  perspective.rs
src/scene/core/: camera.rs  canvas.rs  downcast.rs  error.rs  event.rs  format.rs  geometry.rs  light.rs  loader.rs  log.rs  material.rs  mod.rs  object.rs  resource.rs  sampler.rs  shape.rs  texture.rs  transform.rs  variant.rs
src/scene/geometries/: circle.rs  cone.rs  cube.rs  cylinder.rs  fan.rs  mesh.rs  mod.rs  plane.rs  sphere.rs
src/scene/lights/: directional.rs  mod.rs  point.rs  sky.rs  spot.rs
src/scene/loaders/: json.rs  mod.rs  model.rs  pmm.rs  texture.rs
src/scene/materials/: custom.rs  mod.rs  skinning.rs  skybox.rs  standard.rs
src/scene/scene/: mod.rs  scene.rs  scene_data.rs  scene_node.rs
src/scene/shapes/: mesh.rs  mod.rs  model.rs
src/scene/spectrum/: celsius.rs  kelvin.rs  mod.rs  rgb.rs  srgb.rs  unit.rs  xyz.rs
src/scene/util/: uuid.rs
