[package]
name = "octoon"
version = "0.1.7"
license = "MIT"
authors = ["Rui <2221870259@qq.com>"]
edition = "2018"
description = "Graphics library for Rust."
homepage = "https://github.com/octoon/engine"
repository = "https://github.com/octoon/engine.git"

[dependencies]
byteorder = "1.2.7"
encoding = "0.2.33"
uuid = { version = "0.7.1", features = ["v4","serde"] }
log = { version = "0.4", features = ["std", "serde"] }
rand = { version = "0.6.1", features = ["stdweb"]}
image = { version = "0.20.1" }
base64 = { version = "0.10.1" }

[dependencies.serde]
default-features = false
features = ["rc"]
optional = true
version = "1.0"

[dependencies.serde_derive]
default-features = false
optional = true
version = "1.0"

[dependencies.serde_json]
default-features = false
optional = true
version = "1.0"

[dependencies.stdweb]
version = "0.4.13"
optional = true

[dependencies.stdweb-derive]
version = "0.5.1"
optional = true

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "asmjs")))'.dependencies.gl]
version = "0.9.0"
optional = true

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "asmjs")))'.dependencies.glfw]
version = "0.25.0"
optional = true

[features]
default = ["serde", "serde_derive", "serde_json", "gl", "glfw"]
webgl = ["stdweb", "stdweb-derive"]