[package]
name = "pmm"
version = "0.1.0"
license = "MIT"
authors = ["Rui <2221870259@qq.com>"]
homepage = "https://github.com/octoon/engine"
repository = "https://github.com/octoon/engine.git"
keywords = ["model", "load", "read"]

[dependencies]
octoon-math = { version = "0.1", features = ["serialize"] }
octoon-models = { git = "https://github.com/octoon/models.git" }
octoon-scene = { git = "https://github.com/octoon/scene.git" }
octoon-renderer = { git = "https://github.com/octoon/renderer.git", features = ["default", "webgl"] }